add web to repo

--- a/edit/src/app/page/_src/menu.css
+++ b/edit/src/app/page/_src/menu.css
@@ -1,5 +1,5 @@
 .menu {
-    position: absolute;
+    position: fixed;
     background-color: black;
     color: white;
     border: 2px solid white;
