--- a/edit/src/components/nav/nav.css
+++ b/edit/src/components/nav/nav.css
@@ -1,6 +1,6 @@
 header {
     width: 100vw;
-    background-color: black;
+    background-color: rgb(24, 27, 26);
     font-size: 25px;
     transition: all 0.5s ease-in-out;
     position: fixed;
@@ -27,6 +27,11 @@ header {
     transition: 0.2s ease-in-out;
     color: rgb(255, 0, 0);
     font-size: inherit;
+    font-family: 'Times';
+  }
+  @font-face {
+    font-family: 'Times';
+    src: url('./times.ttf');
   }
   
   header ul li a:hover {
@@ -127,7 +132,7 @@ header {
     top: 0px;
     background-color: black;
     border-top: 140px solid black;
-    height: calc(100vh - 140px);
+    height: 100vh;
     font-size: 25px;
     overflow-x: hidden;
     transition: 0.5s ease-in-out;
@@ -161,6 +166,7 @@ header {
     padding-left: 40px;
     padding-right: 200px;
     margin-left: -20px;
+    font-family: 'Times';
   }
   
   .navMobile ul li a:hover {
@@ -189,6 +195,7 @@ header {
     margin-top: 14px;
     /* width: calc(100vw - 100px); */
     text-align: center;
+    font-family: 'Times';
   }
 
   @media screen and (max-width: 690px) {
@@ -202,7 +209,7 @@ header {
     header ul .pmfTitle {
       width: 50vw;
       left: 25vw;
-      margin-top: 8px;
+      margin-top: -5px;
     }
   }
   @media screen and (max-width: 400px) {
@@ -217,3 +224,35 @@ header {
       left: 108px;
     }
   }
+
+
+.editPageDiv {
+  width: 50vw;
+  height: 50vh;
+  position: fixed;
+  top: 25vh;
+  left: 25vw;
+  background-color: white;
+  color: black;
+  text-align: center;
+}
+
+.editPageNavCover {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+.editPage {
+  border: 2px solid black;
+  /* background-color: black;
+  color: white; */
+}
+
+.saveBtnNavEdit {
+  padding: 10px;
+  background-color: gray;
+  text-align: center;
+}
